--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
     "name": "slm/queue-sqs",
-    "description": "Zend Framework 2 module that integrates with Amazon SQS queuing system",
+    "description": "laminas module that integrates with Amazon SQS queuing system",
     "license": "BSD-3-Clause",
     "type": "library",
     "keywords": [
-        "zf2",
+        "laminas",
         "queue",
         "job",
         "amazon aws",
@@ -24,22 +24,22 @@
         }
     ],
     "require": {
-        "php": "^5.5 || ^7.0",
-        "zendframework/zend-eventmanager": "^2.6 || ^3.0",
-        "zendframework/zend-servicemanager": "^2.7 || ^3.0",
-        "zendframework/zend-stdlib": "^2.2 || ^3.0",
-        "slm/queue": "^1.0",
-        "aws/aws-sdk-php-zf2": "^3.0 || ^4.0"
+        "php": "^7.1",
+        "laminas/laminas-eventmanager": "^2.6 || ^3.0",
+        "laminas/laminas-servicemanager": "^2.7 || ^3.0",
+        "laminas/laminas-stdlib": "^2.2 || ^3.0",
+        "slm/queue": "^2.0",
+        "aws/aws-sdk-php": "^3.140"
     },
     "require-dev": {
-        "zendframework/zend-config": "^2.2",
-        "zendframework/zend-modulemanager": "^2.5",
-        "zendframework/zend-view": "^2.5",
-        "zendframework/zend-log": "^2.5",
-        "zendframework/zend-i18n": "^2.5",
-        "zendframework/zend-serializer": "^2.5",
-        "zendframework/zend-mvc": "^2.5",
-        "phpunit/phpunit": "^4.8",
+        "laminas/laminas-config": "^2.2",
+        "laminas/laminas-modulemanager": "^2.5",
+        "laminas/laminas-view": "^2.5",
+        "laminas/laminas-log": "^2.5",
+        "laminas/laminas-i18n": "^2.5",
+        "laminas/laminas-serializer": "^2.5",
+        "laminas/laminas-mvc": "^2.5",
+        "phpunit/phpunit": "^8",
         "squizlabs/php_codesniffer": "^2.1"
     },
     "extra": {
