--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.1 || ~8.0.0 || ~8.1.0",
         "laminas/laminas-eventmanager": "^2.6 || ^3.0",
         "laminas/laminas-servicemanager": "^2.7 || ^3.0",
         "laminas/laminas-stdlib": "^2.2 || ^3.0",
