--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,11 @@
         }
     ],
     "require": {
-        "php": "^7.1 || ~8.0.0 || ~8.1.0",
+        "php": "^7.4 || ~8.0.0 || ~8.1.0",
         "laminas/laminas-eventmanager": "^2.6 || ^3.0",
         "laminas/laminas-servicemanager": "^2.7 || ^3.0",
         "laminas/laminas-stdlib": "^2.2 || ^3.0",
-        "slm/queue": "^2.0",
+        "slm/queue": "^2.0 || ^3.0",
         "aws/aws-sdk-php": "^3.140"
     },
     "require-dev": {
