--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,12 +29,14 @@ jobs:
           key: ${{ runner.os }}-php${{ matrix.php-versions }}-${{ hashFiles('**/composer.lock') }}
 
       - name: Install dependencies
-        uses: php-actions/composer@v5
+        uses: php-actions/composer@v6
         with:
           command: install
           args: --prefer-dist --no-progress --no-suggest --verbose
           php_version: ${{ matrix.php-versions }}
-          version: 1
+          ssh_key: ${{ secrets.SSH_KEY }}
+          ssh_key_pub: ${{ secrets.SSH_KEY_PUB }}
+          version:
 
       - name: Run test suite
         run: composer run-script test
