--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,9 +34,9 @@ jobs:
           command: install
           args: --prefer-dist --no-progress --no-suggest --verbose
           php_version: ${{ matrix.php-versions }}
+          version: 1
           ssh_key: ${{ secrets.SSH_KEY }}
           ssh_key_pub: ${{ secrets.SSH_KEY_PUB }}
-          version:
 
       - name: Run test suite
         run: composer run-script test
