--- a/composer.json
+++ b/composer.json
@@ -37,13 +37,13 @@
         "aws/aws-sdk-php": "^3.140"
     },
     "require-dev": {
-        "laminas/laminas-config": "^2.2",
-        "laminas/laminas-modulemanager": "^2.5",
-        "laminas/laminas-view": "^2.5",
-        "laminas/laminas-log": "^2.5",
-        "laminas/laminas-i18n": "^2.5",
-        "laminas/laminas-serializer": "^2.5",
-        "laminas/laminas-mvc": "^2.5",
+        "laminas/laminas-config": "^2.2 || ^3.0",
+        "laminas/laminas-modulemanager": "^2.5 || ^3.0",
+        "laminas/laminas-view": "^2.5 || ^3.0",
+        "laminas/laminas-log": "^2.5 || ^3.0",
+        "laminas/laminas-i18n": "^2.5 || ^3.0",
+        "laminas/laminas-serializer": "^2.5 || ^3.0",
+        "laminas/laminas-mvc": "^2.5 || ^3.0",
         "phpunit/phpunit": "^8",
         "squizlabs/php_codesniffer": "^2.1"
     },
